--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,14 @@
 db.sqlite3
 __pycache__/
 *.pyc
-db.sqlite3
 angaar_hai/.env
 angaar_hai/settings.py
 media/
 backups/
+test.py
+debug.log
+errors.log
+Old Code/
+
 
 env
