--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,5 @@
 db.sqlite3
 __pycache__/
-*.pyc
 angaar_hai/.env
 angaar_hai/settings.py
 media/
@@ -13,12 +12,24 @@ Old Code/
 home/__pycache__/
 
 
-<<<<<<< HEAD
 home/__pycache__/
 instructor/__pycache__/
 student/__pycache__/
 
-env
-=======
-env
->>>>>>> feature
+# Byte-compiled / optimized / DLL files
+*.pyc
+*.pyo
+*.pyd
+
+
+# PyCharm
+.idea/
+
+# VS Code
+.vscode/
+
+# System files
+.DS_Store
+Thumbs.db
+
+
