added the pdf section on attendace part

--- a/requirements.txt
+++ b/requirements.txt
@@ -39,6 +39,7 @@ idna==3.10
 jwt==1.4.0
 kombu==5.5.4
 lxml==6.0.0
+matplotlib==3.9.3
 mysqlclient==2.2.7
 numpy==2.2.6
 openpyxl==3.1.5
@@ -64,6 +65,7 @@ razorpay==1.4.2
 redis==6.4.0
 reportlab==4.4.3
 requests==2.32.4
+seaborn==0.13.2
 six==1.17.0
 sqlparse==0.5.3
 svglib==1.5.1
