--- a/requirements.txt
+++ b/requirements.txt
@@ -34,6 +34,7 @@ django-redis==6.0.0
 django-timezone-field==7.1
 et_xmlfile==2.0.0
 fonttools==4.59.1
+google-generativeai==0.8.3
 html5lib==1.1
 idna==3.10
 jwt==1.4.0
